tests/NormalTests/paczka1/fuzzy1/23926151.err
Error in line 3: g5hdYEg7U S81 64,4
Error in line 10: g5hdYEg7U S395 20,88
Error in line 11: qL7t S395 89,59
Error in line 25: t1uyv6 A584 5,7
Error in line 8: g5hdYEg7U S189 57,4
Error in line 28: g5hdYEg7U S395 20,2
Error in line 37: neJ S395 75,02
Error in line 40: t1uyv6 S395 854
